<resources>
    <string name="app_name">Ultimate Math BenchMark</string>
    <string name="CalculoPI">Calcular PI</string>
    <string name="CalculoFibonacci">Cacular Fibonacci</string>
    <string name="Both">Calcular Ambos</string>
    <string name="History">Todos los Puntajes</string>
    <string name="Filling">XXXXXX</string>
    <string name="Result">Resultado:</string>
    <string name="Return">Regresar</string>
    <string name="historial">Historial de Ejecuciones</string>
    <string name="Delete">Borrar Historial</string>
</resources>
