<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingRight="@dimen/top"
    android:paddingLeft="@dimen/top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial"
        android:layout_marginTop="@dimen/top"
        android:theme="@style/TVWhite"/>

    <TextView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/top"
        android:text="@string/Filling"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bot"
        android:theme="@style/ButtonWhite"
        android:text="@string/Delete"
        android:onClick="Delete"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonWhite"
        android:text="@string/Return"
        android:onClick="Return"/>

</android.widget.LinearLayout>